--- a/tdf/src/app/app.component.html
+++ b/tdf/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid mb-5">
     <h1>Bootcamp Enrollment Form</h1>
-    <form #userForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
+    <div class="alert alert-danger" *ngIf="errorMsg">
+        {{errorMsg}}
+    </div>
+    <form #userForm="ngForm" *ngIf="!submitted" (ngSubmit)="onSubmit(userForm)" novalidate>
 
         <div class="form-group">
             <label>Name</label>
